# eroica

./: .gitignore  CLAUDE.md  README.md  config.json  eroica.py  pyproject.toml
.github/workflows/: pr.yml
examples/fur-elise/: voices.ly
examples/fur-elise-full/: voices.ly
examples/gnossienne-no-3/: voices.ly
